--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.5">
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/0f2f450181.js" crossorigin="anonymous"></script>
-        <title>CollageGuardian</title>
+        <title>CollegeGuardian</title>
     </head>
     
     <body class="about-body">
